<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_View">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/secondaryLighterColor"
    android:id="@+id/constraint_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryLighterColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraint_layout"
        android:id="@+id/image_card"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/space_mid"
                android:layout_marginTop="@dimen/space_big"
                app:srcCompat="@drawable/ic_not_selected_pizza"
                 />

           <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >

                <ToggleButton
                    android:id="@+id/round_pizzabtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/round_pizza"
                    android:backgroundTint="@color/primaryTextColor"
                    android:textOff="@string/round_pizza"
                    />

                <ToggleButton
                    android:id="@+id/square_pizzabtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/square_pizza"
                    android:textOff="@string/square_pizza"
                    android:backgroundTint="@color/primaryTextColor"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        app:layout_constraintTop_toBottomOf="@id/image_card"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/topping_scroll">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/topping_choice_chip_group"
            android:layout_width="wrap_content"
            app:singleLine="true"
            android:layout_marginTop="@dimen/space_min"
            android:layout_height="wrap_content"
            >

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@id/topping_scroll"
        android:id="@+id/toppings_container"
        android:paddingStart="@dimen/space_min"
        android:layout_marginRight="@dimen/space_big"
        android:layout_marginLeft="@dimen/space_big"
        android:layout_marginTop="@dimen/space_min">

        <TextView
            android:id="@+id/ingredient_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_min"
            android:layout_marginBottom="@dimen/space_min"
            android:layout_weight="1"
            android:fontFamily="@font/lobster"
            android:text="@string/ingredients"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            />

        <LinearLayout
            android:id="@+id/ingredient_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/space_mid"
            >

            <LinearLayout
                android:id="@+id/ingredient_btns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_mid"
                android:background="@color/primaryTextColor"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="@id/ingredient_container">

                <CheckBox
                    android:id="@+id/pepperoni_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pepperoni" />

                <CheckBox
                    android:id="@+id/mushroom_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mushrooms" />

                <CheckBox
                    android:id="@+id/veggies_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/veggies" />

                <CheckBox
                    android:id="@+id/anchovies_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anchovies" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cheese_btns"
                android:background="@color/primaryTextColor"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/space_big">

                    <RadioButton
                        android:id="@+id/no_cheeseBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_cheese" />

                    <RadioButton
                        android:id="@+id/reg_cheesebtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reg_cheese" />

                    <RadioButton
                        android:id="@+id/double_cheesebtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/double_cheese" />
                </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryTextColor"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toppings_container"
        android:layout_marginRight="@dimen/space_big"
        android:layout_marginLeft="@dimen/space_big"
        android:layout_marginTop="@dimen/space_min"
        android:paddingTop="@dimen/space_mid"
        >
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint">
        <EditText
            android:id="@+id/name_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:id="@+id/phone_input">

            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:ems="10"
            android:inputType="phone"
            android:maxLines="1"

            />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/submit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryLighterColor"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/contact_container"
        android:layout_marginRight="@dimen/space_big"
        android:layout_marginLeft="@dimen/space_big"
        android:layout_marginTop="@dimen/space_min"

        >

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="352dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_min"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/submit_btn"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
